fixed sizing of login and register square in respective pages, added gap between it and edges of the window

--- a/dcm/src/renderer/src/pages/Login/Login.css
+++ b/dcm/src/renderer/src/pages/Login/Login.css
@@ -6,7 +6,7 @@
   padding: 40px;
   border-radius: 12px;
   max-width: 400px;
-  width: 125%;
+  width: 115%;
   text-align: center;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
   position: relative;
